--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       }).then((result) => {
         let jawaban = "";
         if (result.isConfirmed) {
-          jawaban = "Jawaban dariku: YAAAA! AKUU MAUUUU! 😄";
+          jawaban = "Jawaban dariku: YAAAA! AKUU MAUUUU ASAKSKSAKSKAKSK! 😄❤️❤️❤️";
         } else if (result.isDenied) {
           jawaban = "Jawaban terakhir: ga 👎";
         } else {
@@ -193,3 +193,4 @@ ${jawaban}`;
 
 </body>
 </html>
+
